[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pynnlib"
version = "0.1"
authors = [
    {name = "Jep Etau", email = "jep.etau@gmail.com"},
]
description = "A library to load neural network models for SISR and videoSR"
readme = "README.md"
requires-python = ">= 3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
keywords = ["nn"]
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12",
]

[project.urls]
Homepage = "https://github.com/JepEtau/pynnlib"
Documentation = "https://github.com/JepEtau/pynnlib/README.md"
Repository = "https://github.com/JepEtau/pynnlib"
"Bug Tracker" = "https://github.com/JepEtau/pynnlib/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pynnlib*"]
exclude = ["tests*", "scripts"]

[tool.black]
line-length = 90
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
exclude = ["*"]
