[project]
name = "pynnlib"
description = "A library to load neural network models for SISR and videoSR"
readme = "README.md"
authors = [
    {name = "Jep Etau"},
]
requires-python = ">= 3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "opencv-python",
    "hytils",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/JepEtau/pynnlib"

[build-system]
requires = ["setuptools >= 80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pynnlib*"]
exclude = ["tests*", "scripts"]

[tool.setuptools.dynamic]
version = { attr = "pynnlib.__version__" }

[tool.black]
line-length = 90
target-version = ['py312']

[tool.ruff]
exclude = ["*"]
